--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Some curious coding and cleverness.
 
 twitter_username:
-github_username:
+github_username: iatomato
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
