--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ email: l_.ll@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Some curious coding and cleverness.
 
+site_url: https://iatomato.github.io/Blogs/assets/
+
 twitter_username:
 github_username: iatomato
 
