--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ブログ
+title: ブログ | Blogs
 author: John G. Wick
 email: l_.ll@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
@@ -9,6 +9,7 @@ github_username: iatomato
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
+
 minima:
   date_format: "%b %-d, %Y"
 
