--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: ブログ | Blogs
+title: ブログ
 author: John G. Wick
 email: l_.ll@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
