--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 🛠️ Made it
-author: John G. Wick
+title: 🛠️ made it
+author: Wick Jr.
 email: l_.ll@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Some curious coding and cleverness.
